--- a/budget-planner/src/Home.css
+++ b/budget-planner/src/Home.css
@@ -182,6 +182,10 @@ body {
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
   position: horizontal;
 }
+.review-card:hover {
+  transform: translateY(-.5px);
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+}
 .review-card .review-img {
     width: 80px;
     height: 80px;
@@ -300,9 +304,3 @@ body {
   font-size: 14px;
   color: #b3b3b3;
 }
-
-
-
-
-
- 
